--- a/.github/workflows/Azure.yml
+++ b/.github/workflows/Azure.yml
@@ -4,7 +4,7 @@ on:
       
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:            
     - name: "Login and do something"
       uses: azure/CLI@v1
