--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -17,7 +17,7 @@ jobs:
           export token=${{ secrets.GITHUB_TOKEN }} && export ref=${GITHUB_REF:11} && export repo=$GITHUB_REPOSITORY 
           sudo unlink /etc/localtime
           sudo ln -s /usr/share/zoneinfo/Asia/Kolkata /etc/localtime
-          date > .md && sleep 1
+          date > README.md && sleep 1
           git config --global user.name 'amitstudydude'
           git config --global user.email 'amitstudydude@users.noreply.github.com'
           git remote set-url origin https://x-access-token:$token@github.com/$repo
